# mesh-simplification

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  MxBlock.h  MxDynBlock.h  main.cpp  usage.txt
